--- a/index.html
+++ b/index.html
@@ -68,4 +68,5 @@
   <!-- main script -->
   <!-- <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script> -->
   <script type="module" src="/src/main.js"></script>
+  <script async src="https://analytic.gb-sources.xyz/tracker.js" data-ackee-server="https://analytic.gb-sources.xyz" data-ackee-domain-id="f8db907f-0b29-48c1-bec9-118dcd4d1864"></script>
 </html>
